<resources>
    <string name="app_name">Waymusics</string>

    <!-- Drawer Menu -->
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_top_rated">Most Popular</string>
    <string name="drawer_item_feedback">Love Waymusics</string>
    <string name="drawer_item_about">About Waymusics</string>
    <string name="drawer_item_exit">Exit Waymusics</string>
    <string name="drawer_item_version">Version 1.0.0-Beta</string>


    <string name="toolbar_title">Waymusics</string>
    <string name="fintech_app_name" />
    <string name="app_total_recommend" />
    <string name="fintech_developer_name" />
    <string name="fintech_ojk_license" />
    <string name="fintech_app_rating" />
    <string name="listen_music_1">Dengarkan</string>
    <string name="listen_music">Dengarkan</string>
    <string name="fintech_user_write_review">Tulis Review</string>
    <string name="user_review_name">user_review_name</string>
    <string name="action_search">Search Favorite Musics</string>
    <string name="songs">songs</string>
    <string name="artist">artist</string>
    <string name="albums">albums</string>
    <string name="album_artist">album_artist</string>
    <string name="genres">genres</string>

    <string name="is_music_save">Saved</string>
    <string name="music_title_play" />
    <string name="_1_0_0_beta">1.0.0-Beta</string>
</resources>