<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal"
            android:background="@color/purple_700">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_open_close_drawer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/baseline_menu_white_24"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/toolbar_title"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    style="@style/Toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:navigationIcon="@drawable/baseline_search_white_24"
                    app:titleTextAppearance="@style/ToolbarTextAppearanceNormal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/search_music"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@null"
                            android:hint="@string/action_search"
                            android:inputType="text|textAutoComplete"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                            android:textColor="@color/white_flat"
                            android:textColorHint="@color/hint_color"
                            android:textAppearance="@style/TextViewSubtitle1">


                        </com.google.android.material.textfield.TextInputEditText>

                    </LinearLayout>
                </com.google.android.material.appbar.MaterialToolbar>
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:scrollbarSize="0dp">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/searchFilterGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:singleLine="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_audio"
                            style="@style/SearchChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/songs" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_artists"
                            style="@style/SearchChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/artist" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_albums"
                            style="@style/SearchChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/albums" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_album_artists"
                            style="@style/SearchChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/album_artist" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_genres"
                            style="@style/SearchChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/genres" />
                    </com.google.android.material.chip.ChipGroup>

                </HorizontalScrollView>
            </com.google.android.material.appbar.AppBarLayout>

            <ProgressBar
                android:id="@+id/loading_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/purple_500"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/main_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>




        </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.appcompat.widget.LinearLayoutCompat>


    <com.mikepenz.materialdrawer.widget.MaterialDrawerSliderView
        android:id="@+id/slider"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true" />
</androidx.drawerlayout.widget.DrawerLayout>
