<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/id_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_flat"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/music_playing"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:lottie_rawRes="@raw/music_playing"
                        app:lottie_autoPlay="false"
                        android:visibility="gone"
                        app:lottie_loop="true"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/album_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/baseline_album_black_24"/>


                </androidx.appcompat.widget.LinearLayoutCompat>


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/music_title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:gravity="center_vertical"
                        android:text="@string/fintech_app_name"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/music_artist_name"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:textSize="14sp"
                        android:gravity="center_vertical"
                        android:text="@string/fintech_developer_name"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/music_length"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:textSize="14sp"
                        android:gravity="center_vertical"
                        android:text="@string/fintech_ojk_license"/>





                </androidx.appcompat.widget.LinearLayoutCompat>


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end|center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="vertical">


                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/btn_linear_download"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/btn_recommend_up"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/baseline_library_add_black_24" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="SIMPAN"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>



            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/btn_music_listen"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:background="@color/write_review"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_btn_listen"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/listen_music"
                        android:textStyle="bold" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>




    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>